// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Iread Modal Container Action should return the correct constant for getAssignmentMetaData 1`] = `
Object {
  "type": "containers/PortfolioPageContainer/GET_ASSIGNMENT_META_DATA",
}
`;

exports[`Iread Modal Container Action should return the correct constant for getClassCommunity 1`] = `
Object {
  "type": "containers/PortfolioPageContainer/get_class_community",
}
`;

exports[`Iread Modal Container Action should return the correct constant for getClassCommunityDataSuccess 1`] = `
Object {
  "resultsData": undefined,
  "type": "containers/PortfolioPageContainer/get_class_community_success",
}
`;

exports[`Iread Modal Container Action should return the correct constant for getClassDataRequestSuccess 1`] = `
Object {
  "teacherObj": undefined,
  "type": "app/PortfolioPageContainer/SET_PORTFOLIO_TEACHERS_DATA",
}
`;

exports[`Iread Modal Container Action should return the correct constant for getClassDetailsRequest 1`] = `
Object {
  "type": "app/PortfolioPageContainer/GET_CLASS",
}
`;

exports[`Iread Modal Container Action should return the correct constant for getInboxClassByCommunityId 1`] = `
Object {
  "type": "containers/PortfolioPageContainer/GET_PORTFOLIO_CLASS_BY_COMMUNITYID",
}
`;

exports[`Iread Modal Container Action should return the correct constant for getPortfolioClassDetailsRequest 1`] = `
Object {
  "teacherId": undefined,
  "type": "app/PortfolioPageContainer/GET_PORTFOLIO_CLASS_DATA",
}
`;

exports[`Iread Modal Container Action should return the correct constant for getStudentSubmissionSuccess 1`] = `
Object {
  "resultsData": undefined,
  "type": "containers/PortfolioPageContainer/Student_Submission_Success",
}
`;

exports[`Iread Modal Container Action should return the correct constant for getStudentSubmissions 1`] = `
Object {
  "type": "containers/PortfolioPageContainer/Student_Submission",
}
`;

exports[`Iread Modal Container Action should return the correct constant for getStudentsSubmissionMetadata 1`] = `
Object {
  "classId": undefined,
  "type": "app/PortfolioPageContainer/GET_STUDENT_SUBMISSION_META_DATA",
}
`;

exports[`Iread Modal Container Action should return the correct constant for setProgramListForTabSuccess 1`] = `
Object {
  "data": undefined,
  "type": "containers/PortfolioPageContainer/SET_PORTFOLIO_PROGRAM_LIST_FOR_TABS",
}
`;

exports[`Iread Modal Container Action should return the correct constant for setProgramListSuccess 1`] = `
Object {
  "data": undefined,
  "type": "containers/PortfolioPageContainer/SET_PORTFOLIO_PROGRAM_LIST",
}
`;

exports[`Iread Modal Container Action should return the correct constant for setStudentAssignmentRequestSuccess 1`] = `
Object {
  "data": undefined,
  "type": "containers/PortfolioPageContainer/SET_ASSIGNMENT_META_DATA",
}
`;

exports[`Iread Modal Container Action should return the correct constant for setStudentAssignmentSetCount 1`] = `
Object {
  "data": undefined,
  "type": "containers/PortfolioPageContainer/SET_ASSIGNMENT_COUNT",
}
`;

exports[`Iread Modal Container Action should return the correct constant for setStudentRequestSuccess 1`] = `
Object {
  "data": undefined,
  "type": "app/PortfolioPageContainer/SET_STUDENT_SUBMISSION_META_DATA",
}
`;

exports[`Iread Modal Container Action should return the correct constant for setStudentSetCount 1`] = `
Object {
  "data": undefined,
  "type": "containers/PortfolioPageContainer/GET_STUDENT_SUBMISSION_META_DATA_COUNT",
}
`;
